--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -73,7 +73,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    background: linear-gradient(to right, #ee9ca7 95%,#ffc3a0 100%); 
+    background: linear-gradient(to right, #ee9ca7 60%,#ffc3a0 100%); 
 }
 @media (max-width: 800px) { 
     .background{ 
